[gd_scene load_steps=2 format=3 uid="uid://dsddf4tr4fywb"]

[ext_resource type="Script" path="res://Resources/UIElements/CountDown/CountDown.gd" id="1_31sgm"]

[node name="ThreeTwoOneAnimations" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31sgm")

[node name="Digit_3" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -206.0
offset_right = 86.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(77, 210)
theme_override_font_sizes/font_size = 300
text = "3"

[node name="Digit_2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -206.0
offset_right = 85.5
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85.5, 218)
theme_override_font_sizes/font_size = 300
text = "2
"

[node name="Digit_1" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -206.0
offset_right = 85.5
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85.5, 218)
theme_override_font_sizes/font_size = 300
text = "1"
